# open303

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
src/plugins/Open303/: Open303.cpp  Open303.hpp  Open303.sc  Open303.schelp
src/plugins/Open303/DSP/: GlobalFunctions.h  rosic_NumberManipulations.h  rosic_Open303.cpp  rosic_Open303.h  rosic_RealFunctions.h
tests/: test.scd  test_interactive.scd  test_load.scd  test_slide_routine.scd
